--- a/app/src/main/res/layout/activity_screen3.xml
+++ b/app/src/main/res/layout/activity_screen3.xml
@@ -83,6 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="&lt;--Back"
+        android:background="#778899"
         android:id="@+id/button_back_screen3"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
@@ -92,6 +93,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Next-->"
+        android:background="#778899"
         android:id="@+id/button_next_screen3"
         android:layout_alignTop="@+id/button_back_screen3"
         android:layout_alignParentRight="true"
