--- a/app/src/main/res/layout/activity_screen4.xml
+++ b/app/src/main/res/layout/activity_screen4.xml
@@ -33,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/lt_back"
+        android:background="#778899"
         android:id="@+id/button_back_choose_destn"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
@@ -40,7 +41,7 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="195dp"
+        android:layout_height="400dp"
         android:background="@drawable/eb_map"
         android:layout_below="@+id/textView5"
         android:layout_centerHorizontal="true"
