--- a/app/src/main/res/layout/activity_screen5.xml
+++ b/app/src/main/res/layout/activity_screen5.xml
@@ -28,7 +28,7 @@
         android:id="@+id/textView7"
         android:layout_below="@+id/textView6"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="0dp"/>
 
     <Button
         android:layout_width="wrap_content"
@@ -42,20 +42,22 @@
 
     <Button
         android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:text="Play/Resume"
+        android:layout_height="50dp"
+        android:text="Play"
+        android:textStyle="bold"
         android:background="#008000"
         android:onClick="play_func"
         android:id="@+id/button_play_data_center"
-        android:layout_marginTop="38dp"
         android:layout_below="@+id/textView7"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_toLeftOf="@+id/button_pause_data_center"
+        android:layout_toStartOf="@+id/button_pause_data_center"
+        android:layout_marginTop="52dp" />
 
     <Button
         android:layout_width="100dp"
-        android:layout_height="60dp"
-        android:text="Pause "
+        android:layout_height="50dp"
+        android:text="Pause"
+        android:textStyle="bold"
         android:background="#FFA07A"
         android:onClick="pause_func"
         android:id="@+id/button_pause_data_center"
@@ -67,12 +69,13 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:text="Stop"
+        android:textStyle="bold"
         android:background="#FF0000"
         android:onClick="stop_func"
         android:id="@+id/button_stop_data_center"
         android:layout_alignTop="@+id/button_pause_data_center"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_toRightOf="@+id/button_pause_data_center"
+        android:layout_toEndOf="@+id/button_pause_data_center" />
 
     <Button
         android:layout_width="wrap_content"
@@ -80,12 +83,10 @@
         android:text="Change Destination"
         android:background="#c97f7f"
         android:id="@+id/button_chng_destn_data_center"
-        android:layout_marginTop="45dp"
-        android:layout_below="@+id/button_pause_data_center"
-        android:layout_alignLeft="@+id/button_srch_web_data_center"
-        android:layout_alignStart="@+id/button_srch_web_data_center"
-        android:layout_alignRight="@+id/button_srch_web_data_center"
-        android:layout_alignEnd="@+id/button_srch_web_data_center" />
+        android:layout_below="@+id/textView24"
+        android:layout_alignLeft="@+id/textView24"
+        android:layout_alignStart="@+id/textView24"
+        android:layout_marginTop="22dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -94,10 +95,57 @@
         android:background="#1E90FF"
         android:id="@+id/button_srch_web_data_center"
         android:layout_below="@+id/button_chng_destn_data_center"
-        android:layout_marginTop="50dp"
-        android:layout_alignRight="@+id/textView7"
-        android:layout_alignEnd="@+id/textView7"
-        android:layout_alignLeft="@+id/textView7"
-        android:layout_alignStart="@+id/textView7" />
+        android:layout_marginTop="10dp"
+        android:layout_alignRight="@+id/textView6"
+        android:layout_alignEnd="@+id/textView6"
+        android:layout_alignLeft="@+id/button_chng_destn_data_center"
+        android:layout_alignStart="@+id/button_chng_destn_data_center" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="If you wish to go elsewhere while Jeeves is still talking,"
+        android:id="@+id/textView22"
+        android:layout_below="@+id/button_pause_data_center"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="please pause or stop him before clicking a button."
+        android:id="@+id/textView23"
+        android:layout_below="@+id/textView22"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="(Jeeves likes to be polite) "
+        android:id="@+id/textView24"
+        android:layout_below="@+id/textView23"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="&lt;--Back"
+        android:background="#778899"
+        android:id="@+id/button_back_data_center"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ask Questions"
+        android:background="#FFFF66"
+        android:id="@+id/button_ask_qstns_data_center"
+        android:layout_below="@+id/button_srch_web_data_center"
+        android:layout_marginTop="10dp"
+        android:layout_alignRight="@+id/textView6"
+        android:layout_alignEnd="@+id/textView6"
+        android:layout_alignLeft="@+id/button_srch_web_data_center"
+        android:layout_alignStart="@+id/button_srch_web_data_center" />
 
 </RelativeLayout>
