--- a/app/src/main/res/layout/activity_screen7.xml
+++ b/app/src/main/res/layout/activity_screen7.xml
@@ -43,19 +43,21 @@
     <Button
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:text="Play/Resume"
+        android:text="Play"
+        android:textStyle="bold"
         android:onClick="play_func"
         android:background="#008000"
         android:id="@+id/button_play_stdnt_srvcs"
-        android:layout_marginTop="39dp"
         android:layout_below="@+id/textView_back_to_stdnt_svcs"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_toLeftOf="@+id/button_pause_stdnt_srvcs"
+        android:layout_toStartOf="@+id/button_pause_stdnt_srvcs"
+        android:layout_marginTop="60dp" />
 
     <Button
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="Pause"
+        android:textStyle="bold"
         android:background="#FFA07A"
         android:onClick="pause_func"
         android:id="@+id/button_pause_stdnt_srvcs"
@@ -66,12 +68,13 @@
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:text="Stop"
+        android:textStyle="bold"
         android:background="#FF0000"
         android:onClick="stop_func"
         android:id="@+id/button_stop_stdnt_srvcs"
         android:layout_alignTop="@+id/button_pause_stdnt_srvcs"
-        android:layout_alignLeft="@+id/button_end_tour_screen7"
-        android:layout_alignStart="@+id/button_end_tour_screen7" />
+        android:layout_toRightOf="@+id/button_pause_stdnt_srvcs"
+        android:layout_toEndOf="@+id/button_pause_stdnt_srvcs" />
 
     <Button
         android:layout_width="wrap_content"
@@ -79,8 +82,10 @@
         android:text="Change Destination"
         android:background="#c97f7f"
         android:id="@+id/button_chng_destn_stdnt_srvcs"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_below="@+id/textView21"
+        android:layout_alignLeft="@+id/textView21"
+        android:layout_alignStart="@+id/textView21"
+        android:layout_marginTop="22dp" />
 
     <Button
         android:layout_width="wrap_content"
@@ -88,12 +93,59 @@
         android:text="Search Website"
         android:background="#1E90FF"
         android:id="@+id/button_srch_web_stdnt_srvcs"
-        android:layout_marginTop="42dp"
         android:layout_below="@+id/button_chng_destn_stdnt_srvcs"
-        android:layout_alignLeft="@+id/button_chng_destn_stdnt_srvcs"
-        android:layout_alignStart="@+id/button_chng_destn_stdnt_srvcs"
+        android:layout_marginTop="10dp"
         android:layout_alignRight="@+id/button_chng_destn_stdnt_srvcs"
-        android:layout_alignEnd="@+id/button_chng_destn_stdnt_srvcs" />
+        android:layout_alignEnd="@+id/button_chng_destn_stdnt_srvcs"
+        android:layout_alignLeft="@+id/button_chng_destn_stdnt_srvcs"
+        android:layout_alignStart="@+id/button_chng_destn_stdnt_srvcs" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="If you wish to go elsewhere while Jeeves is still talking,"
+        android:id="@+id/textView19"
+        android:layout_below="@+id/button_play_stdnt_srvcs"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="please pause or stop him before clicking a button."
+        android:id="@+id/textView20"
+        android:layout_below="@+id/textView19"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="(Jeeves likes to be polite)"
+        android:id="@+id/textView21"
+        android:layout_below="@+id/textView20"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="&lt;--Back"
+        android:background="#778899"
+        android:id="@+id/button_back_student_services"
+        android:layout_alignTop="@+id/button_end_tour_screen7"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Ask Questions"
+        android:background="#FFFF66"
+        android:id="@+id/button_ask_qstn_student_services"
+        android:layout_below="@+id/button_srch_web_stdnt_srvcs"
+        android:layout_marginTop="10dp"
+        android:layout_alignRight="@+id/button_srch_web_stdnt_srvcs"
+        android:layout_alignEnd="@+id/button_srch_web_stdnt_srvcs"
+        android:layout_alignLeft="@+id/button_srch_web_stdnt_srvcs"
+        android:layout_alignStart="@+id/button_srch_web_stdnt_srvcs" />
 
 
 </RelativeLayout>
