--- a/app/src/main/res/layout/activity_new_drop_tower.xml
+++ b/app/src/main/res/layout/activity_new_drop_tower.xml
@@ -24,38 +24,44 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="DROP TOWER"
         android:textStyle="bold"
-        android:textSize="25dp"
+        android:textSize="40dp"
         android:id="@+id/textView13"
         android:layout_below="@+id/textView8"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="0dp" />
 
     <Button
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:text="Play"
+        android:textSize="30dp"
+        android:textStyle="bold"
         android:background="#008000"
         android:onClick="play_func"
         android:id="@+id/button_play_drop_tower"
-        android:layout_marginTop="37dp"
+        android:layout_marginTop="90dp"
         android:layout_below="@+id/textView13"
         android:layout_toLeftOf="@+id/button_pause_drop_tower"
         android:layout_toStartOf="@+id/button_pause_drop_tower" />
 
     <Button
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:text="Pause"
+        android:textSize="30dp"
         android:onClick="pause_func"
+        android:textStyle="bold"
         android:background="#FFA07A"
         android:id="@+id/button_pause_drop_tower"
         android:layout_alignTop="@+id/button_play_drop_tower"
         android:layout_centerHorizontal="true" />
 
     <Button
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:text="Stop"
+        android:textSize="30dp"
+        android:textStyle="bold"
         android:onClick="stop_func"
         android:background="#FF0000"
         android:id="@+id/button_stop_drop_tower"
@@ -64,23 +70,27 @@
         android:layout_toEndOf="@+id/button_pause_drop_tower" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:text="Change Destination"
+        android:textStyle="bold"
+        android:textSize="30dp"
         android:background="#c97f7f"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="80dp"
         android:id="@+id/button_chng_destn_drop_tower"
-        android:layout_below="@+id/textView27"
         android:layout_alignLeft="@+id/textView13"
-        android:layout_alignStart="@+id/textView13" />
+        android:layout_alignStart="@+id/textView13"
+        android:layout_below="@+id/button_pause_drop_tower" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:text="Search Website"
+        android:textStyle="bold"
+        android:textSize="30dp"
         android:background="#1E90FF"
         android:id="@+id/button_srch_web_drop_tower"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="60dp"
         android:layout_below="@+id/button_chng_destn_drop_tower"
         android:layout_alignRight="@+id/button_chng_destn_drop_tower"
         android:layout_alignEnd="@+id/button_chng_destn_drop_tower"
@@ -97,34 +107,11 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="If you wish to go elsewhere while Jeeves is still talking,"
-        android:id="@+id/textView25"
-        android:layout_below="@+id/button_pause_drop_tower"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="please pause or stop him before clicking a button."
-        android:id="@+id/textView26"
-        android:layout_below="@+id/textView25"
-        android:layout_centerHorizontal="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=" (Jeeves likes to be polite)"
-        android:id="@+id/textView27"
-        android:layout_below="@+id/textView26"
-        android:layout_centerHorizontal="true" />
-
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="&lt;--Back"
+        android:onClick="onPause"
         android:background="#778899"
         android:id="@+id/button_back_new_drop_tower"
         android:layout_alignParentBottom="true"
@@ -132,13 +119,15 @@
         android:layout_alignParentStart="true" />
 
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
         android:text="Ask questions"
+        android:textStyle="bold"
+        android:textSize="30dp"
         android:background="#FFFF66"
         android:id="@+id/button_ask_qstns_new_drop_tower"
         android:layout_below="@+id/button_srch_web_drop_tower"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="60dp"
         android:layout_alignRight="@+id/button_srch_web_drop_tower"
         android:layout_alignEnd="@+id/button_srch_web_drop_tower"
         android:layout_alignLeft="@+id/button_srch_web_drop_tower"
