--- a/app/src/main/res/layout/activity_screen8.xml
+++ b/app/src/main/res/layout/activity_screen8.xml
@@ -21,6 +21,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="FAQs"
+        android:textSize="30dp"
         android:textStyle="bold"
         android:id="@+id/textView9"
         android:layout_gravity="center_horizontal"
@@ -31,6 +32,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
+        android:textSize="25dp"
+        android:textStyle="bold"
         android:text="1. Do robots dream?"
         android:textColor="#0000FF"
         android:id="@+id/qstn1"
@@ -42,6 +45,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="25dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="A. That’s a good question so we asked Jeeves. He says, “When my power is turned off, I do not dream, but when I am in sleep mode, I will sometimes defragment my hard drive. This process is very similar to what humans do when they dream. Last week, I had a wonderful defrag session about a photoshop document full of 1’s and 0’s.” "
         android:id="@+id/ans1"
@@ -53,6 +57,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="2. Does Jeeves sing and dance?"
         android:textColor="#0000FF"
@@ -65,6 +71,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="25dp"
+
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="A. Jeeves has gears and springs that allow him to dance, but he has not yet learned to sing. "
         android:id="@+id/ans2"
@@ -76,6 +84,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="3. How old do I have to be to get into PSU?"
         android:textColor="#0000FF"
@@ -88,6 +98,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="25dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="A. Age is not a factor when admitting students to PSU, applicants are evaluated on intelligence and knowledge. So far, the youngest student entered PSU at age 12 and then entered the PhD program at age 16."
             android:id="@+id/ans3"
@@ -99,6 +110,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="25dp"
+            android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="4. What is Jeeves made of?"
             android:textColor="#0000FF"
@@ -111,6 +124,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="25dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="A. Aluminum, steel, copper, plastic, wood, glue, cloth and lots of love from PSU students. "
             android:id="@+id/ans4"
@@ -121,6 +135,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="25dp"
+            android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="5. Where’s the restroom?"
             android:textColor="#0000FF"
@@ -133,6 +149,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="25dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="A. Unfortunately, that’s one of the things Jeeves doesn’t know about yet, but there are restrooms on every floor. "
             android:id="@+id/ans5"
@@ -144,6 +161,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="25dp"
+            android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="6. What is the history of Jeeves?"
             android:textColor="#0000FF"
@@ -156,6 +175,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="25dp"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="A. The name originated from a fictional character in a series of humorous short stories and novels by P. G. Wodehouse (1881–1975). Created in 1915, Jeeves is a highly competent personal valet to a wealthy young Londoner. After being written about by Wodehouse for 59 years, the name Jeeves has been adopted by many similar characters to the point of the word “jeeves” becoming a generic term in many dictionaries to refer to a valet or butler of a wealthy employer. The Jeeves robot here at PSU is an
 ongoing project of robotics students in the Maseeh College of Engineering and Computer Science. "
