--- a/app/src/main/res/layout/activity_screen3.xml
+++ b/app/src/main/res/layout/activity_screen3.xml
@@ -14,6 +14,8 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Click ALL that apply:"
+        android:textSize="30dp"
+        android:textStyle="bold"
         android:id="@+id/textView4"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -23,9 +25,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="I want to be a PSU student"
-        android:textSize="18dp"
+        android:textSize="25dp"
         android:id="@+id/checkBox"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="60dp"
         android:checked="false"
         android:layout_below="@+id/textView4"
         android:layout_alignParentLeft="true"
@@ -36,48 +38,48 @@
         android:layout_height="wrap_content"
         android:text="I want to know if I should give money to PSU"
         android:id="@+id/checkBox2"
-        android:textSize="18dp"
+        android:textSize="25dp"
         android:checked="false"
         android:layout_below="@+id/checkBox"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="60dp" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="I like FACTS and TRIVIA"
-        android:textSize="18dp"
+        android:textSize="25dp"
         android:id="@+id/checkBox3"
         android:checked="false"
         android:layout_below="@+id/checkBox2"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="60dp" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="I am a KID AT HEART"
-        android:textSize="18dp"
+        android:textSize="25dp"
         android:id="@+id/checkBox4"
         android:checked="false"
         android:layout_below="@+id/checkBox3"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginTop="20dp" />
+        android:layout_marginTop="60dp" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="I remember life before cell phones"
         android:id="@+id/checkBox5"
-        android:textSize="18dp"
+        android:textSize="25dp"
         android:checked="false"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/checkBox4"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="60dp"/>
 
     <Button
         android:layout_width="wrap_content"
