--- a/app/src/main/res/layout/activity_screen4.xml
+++ b/app/src/main/res/layout/activity_screen4.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="@string/choose_a_destination"
+        android:textStyle="bold"
         android:id="@+id/textView5"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
