--- a/app/src/main/res/layout/activity_screen9.xml
+++ b/app/src/main/res/layout/activity_screen9.xml
@@ -16,15 +16,16 @@
         android:text="Thanks for visiting PSU!"
         android:textStyle="bold|italic"
         android:id="@+id/textView10"
-        android:layout_marginTop="90dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:textSize="30dp"
+        android:layout_above="@+id/button_restart_tour_screen9"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="30dp" />
 
     <Button
         android:layout_width="200dp"
-        android:layout_height="75dp"
+        android:layout_height="100dp"
         android:textStyle="bold"
-        android:textSize="25dp"
+        android:textSize="30dp"
         android:background="#008000"
         android:text="Restart Tour"
         android:id="@+id/button_restart_tour_screen9"
